--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <main class="snailbait-arena">
+    <p id="snailbait-fps" class="snailbait-fps">0</p>
     <canvas class="snailbait-game-canvas" id="snailbait-game-canvas" width="800" height="400">
       你的浏览器不支持 HTML5 Canvas.
     </canvas>
